Bug 235311 - [PATCH] message "No other participants" is not translatable
Summary: [PATCH] message "No other participants" is not translatable
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Similar Artists (show other bugs)
Version: 2.3.0.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-25 00:47 UTC by Alexander Potashev
Modified: 2010-07-21 00:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Makes message translatable (1.99 KB, patch)
2010-06-08 17:59 UTC, Jan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-04-25 00:47:54 UTC
Version:           2.3.0.90 (using 4.4.2 (KDE 4.4.2), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.32

The message "No other participants" in the "Upcoming events" applet can't be translated (via i18n).
Comment 1 Jan 2010-06-08 17:59:22 UTC
Created attachment 47818 [details]
Makes message translatable
Comment 2 Myriam Schweingruber 2010-06-08 23:08:11 UTC
Could you please make a merge request on http://gitorious.org/amarok/amarok/merge_requests so the developers can have a look and implement it? Thank you :)
Comment 3 Alexander Potashev 2010-07-19 19:53:42 UTC
The bug is still not fixed.
Comment 4 Bart Cerneels 2010-07-19 21:40:20 UTC
commit 4a54b849df641c525519abfd07d4b06b24569d20
Author: Bart Cerneels <bart.cerneels@kde.org>
Date:   Mon Jul 19 21:39:52 2010 +0200

    Squashed commit of the following:
    
    commit f9f363cded1105fb45fec85a5a0359fecf14ae41
    Author: Bart Cerneels <bart.cerneels@kde.org>
    Date:   Mon Jul 19 21:37:12 2010 +0200
    
        Add Jan Janssen's patch to changelog.
    
    commit 35fac04bcb29146dda30082fbe9e5828136c4279
    Merge: 7c9dc12 668f302
    Author: Bart Cerneels <bart.cerneels@kde.org>
    Date:   Mon Jul 19 21:34:51 2010 +0200
    
        Merge commit 'refs/merge-requests/181' of git://gitorious.org/amarok/amarok into integration
    
    commit 668f3024ebb92b2047eb443f0ed668b7fa0dedbe
    Author: Jan Janssen <medhefgo@web.de>
    Date:   Thu Jul 15 12:14:25 2010 +0200
    
        Make message "No other participants" translatable
    
        BUG: 235311

diff --git a/ChangeLog b/ChangeLog
index 15c7e00..98bcd10 100644
--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,8 @@ VERSION 2.3.2-Beta 1
       Patch by Richard Longland <rlongland@hotmail.com>.
 
   BUGFIXES:
+    * Make "No other participants" in the events applet translatable.
+      Patch by Jan Janssen. (BR 235311)
     * Fix track number on DAAP shares. Patch by Silvio Frischknecht. (BR 235030)
     * Fixed filtering by rating in the playlist. (BR 240293)
     * The scripts categories are now translatable. (BR 240563)
diff --git a/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp b/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp
index 532c7a1..b320605 100644
--- a/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp
+++ b/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp
@@ -225,7 +225,7 @@ UpcomingEventsApplet::dataUpdated( const QString& name, const Plasma::DataEngine
             widget->setName( events.at( i ).name() );
             widget->setDate( KDateTime( events.at( i ).date() ) );
             widget->setLocation( events.at( i ).location() );
-            !artistList.isEmpty() ? widget->setParticipants( artistList ) : widget->setParticipants( "No other participants" );
+            widget->setParticipants( artistList );
             widget->setUrl( events.at( i ).url() );
             widget->setImage( events.at( i ).smallImageUrl() );
             m_widgets.insert( i, widget );
diff --git a/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp b/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp
index 2070b8d..376ce47 100644
--- a/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp
+++ b/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp
@@ -150,9 +150,9 @@ void
 UpcomingEventsWidget::setParticipants( const QString &participants )
 {
     QFont font;
-    if( participants == "No other participants" )
+    if( participants.isEmpty() )
     {
-        m_participants->setText( participants );
+        m_participants->setText( i18n( "No other participants" ) );
         font.setItalic( true );
         m_participants->setFont( font );
     }
Comment 5 Jan 2010-07-21 00:52:18 UTC
commit 668f3024ebb92b2047eb443f0ed668b7fa0dedbe
Author: Jan Janssen <medhefgo@web.de>
Date:   Thu Jul 15 12:14:25 2010 +0200

    Make message "No other participants" translatable
    
    BUG: 235311

diff --git a/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp b/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp
index 532c7a1..b320605 100644
--- a/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp
+++ b/src/context/applets/upcomingevents/UpcomingEventsApplet.cpp
@@ -225,7 +225,7 @@ UpcomingEventsApplet::dataUpdated( const QString& name, const Plasma::DataEngine
             widget->setName( events.at( i ).name() );
             widget->setDate( KDateTime( events.at( i ).date() ) );
             widget->setLocation( events.at( i ).location() );
-            !artistList.isEmpty() ? widget->setParticipants( artistList ) : widget->setParticipants( "No other participants" );
+            widget->setParticipants( artistList );
             widget->setUrl( events.at( i ).url() );
             widget->setImage( events.at( i ).smallImageUrl() );
             m_widgets.insert( i, widget );
diff --git a/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp b/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp
index 2070b8d..376ce47 100644
--- a/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp
+++ b/src/context/applets/upcomingevents/UpcomingEventsWidget.cpp
@@ -150,9 +150,9 @@ void
 UpcomingEventsWidget::setParticipants( const QString &participants )
 {
     QFont font;
-    if( participants == "No other participants" )
+    if( participants.isEmpty() )
     {
-        m_participants->setText( participants );
+        m_participants->setText( i18n( "No other participants" ) );
         font.setItalic( true );
         m_participants->setFont( font );
     }