Make message "No other participants" translatable

BUG: 235311